2007-07-26  Jan Schmidt  <thaytan@mad.scientist.com>

	* tests/check/libs/.cvsignore:
	Ignore the mixer test binary.

2007-07-26  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/vorbis/vorbisdec.c: (vorbis_dec_push_forward):
	Gratuitous comment change to trigger a rebuild on the buildbots.

2007-07-25  Wim Taymans  <wim.taymans@gmail.com>

	* gst-libs/gst/sdp/gstsdpmessage.c: (gst_sdp_media_get_media),
	(gst_sdp_media_get_port), (gst_sdp_media_get_num_ports),
	(gst_sdp_media_get_proto), (gst_sdp_media_formats_len),
	(gst_sdp_media_get_format), (gst_sdp_media_get_information),
	(gst_sdp_media_connections_len), (gst_sdp_media_get_connection),
	(gst_sdp_media_bandwidths_len), (gst_sdp_media_get_badwidth),
	(gst_sdp_media_get_key), (gst_sdp_media_attributes_len),
	(gst_sdp_media_get_attribute), (gst_sdp_media_get_attribute_val_n),
	(gst_sdp_media_get_attribute_val):
	* gst-libs/gst/sdp/gstsdpmessage.h:
	Constify args where we can.

2007-07-25  Wim Taymans  <wim.taymans@gmail.com>

	* gst-libs/gst/interfaces/Makefile.am:
	* gst-libs/gst/interfaces/rtspextension.c:
	(gst_rtsp_extension_get_type), (gst_rtsp_extension_iface_init),
	(gst_rtsp_extension_detect_server),
	(gst_rtsp_extension_before_send), (gst_rtsp_extension_after_send),
	(gst_rtsp_extension_parse_sdp), (gst_rtsp_extension_setup_media),
	(gst_rtsp_extension_configure_stream),
	(gst_rtsp_extension_get_transports),
	(gst_rtsp_extension_stream_select), (gst_rtsp_extension_send):
	* gst-libs/gst/interfaces/rtspextension.h:
	Move interface for RTSP extensions from -good to here.
	Added helper methods to invoke interface methods.

2007-07-25  Wim Taymans  <wim.taymans@gmail.com>

	* docs/libs/gst-plugins-base-libs-sections.txt:
	* gst-libs/gst/rtsp/gstrtspdefs.h:
	* gst-libs/gst/rtsp/gstrtspmessage.c: (key_value_foreach),
	(gst_rtsp_message_get_type), (gst_rtsp_message_parse_request),
	(gst_rtsp_message_init_response),
	(gst_rtsp_message_parse_response), (gst_rtsp_message_new_data),