@@ -24,7 +24,8 @@
 
 G_BEGIN_DECLS
 
-gchar *gst_rtsp_base64_encode(const gchar *data, gsize len);
+gchar *gst_rtsp_base64_encode    (const gchar *data, gsize len);
+void   gst_rtsp_base64_decode_ip (gchar *data, gsize *len);
 
 G_END_DECLS
 
